fix: fix security config